--- a/Vaccine App/View/Opret.xaml
+++ b/Vaccine App/View/Opret.xaml
@@ -8,6 +8,8 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="349" Margin="10,110,0,0" VerticalAlignment="Top" Width="241"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="85" Margin="10,464,0,0" VerticalAlignment="Top" Width="193"/>
 
     </Grid>
 </Page>
