--- a/Vaccine App/View/MainPage.xaml
+++ b/Vaccine App/View/MainPage.xaml
@@ -1,13 +1,20 @@
 ﻿<Page
-    x:Class="Vaccine_App.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Vaccine_App"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:Vaccine_App.ViewModel"
+    x:Class="Vaccine_App.MainPage"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.DataContext>
+            <ViewModel:BrugerViewmodel/>
+        </Grid.DataContext>
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="225" Margin="0,10,0,0" VerticalAlignment="Top" Width="340"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="53" Margin="10,353,0,0" VerticalAlignment="Top" Width="124"/>
+        <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Height="53" Margin="206,353,0,0" VerticalAlignment="Top" Width="134"/>
 
     </Grid>
 </Page>
