--- a/Vaccine App/View/MainPage.xaml
+++ b/Vaccine App/View/MainPage.xaml
@@ -6,20 +6,25 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:Vaccine_App.ViewModel"
     x:Class="Vaccine_App.MainPage"
+    xmlns:converters="using:Vaccine_App.Converter"
     mc:Ignorable="d">
+
+    <Page.Resources>
+        <converters:TextConverter x:Name="IntToString"/>
+    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.DataContext>
             <ViewModel:BrugerViewmodel/>
         </Grid.DataContext>
         <ListView x:Name="listView" HorizontalAlignment="Left" Height="225" Margin="0,10,0,0" VerticalAlignment="Top" Width="340" ItemsSource="{Binding BarnCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedBarn, Mode=TwoWay}"/>
-        <Button x:Name="button" Content="Create" HorizontalAlignment="Left" Height="53" Margin="10,452,0,0" VerticalAlignment="Top" Width="124" Command="{Binding CreateBarnCommand}"/>
+        <Button x:Name="button" Content="Create" HorizontalAlignment="Left" Height="53" Margin="10,464,0,0" VerticalAlignment="Top" Width="124" Command="{Binding CreateBarnCommand}"/>
         <Button x:Name="button1" Content="Delete" HorizontalAlignment="Left" Height="53" Margin="216,452,0,0" VerticalAlignment="Top" Width="134" Command="{Binding DeleteBarnCommand}"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="10,267,0,0" TextWrapping="Wrap" Text="{Binding Fødselsdato, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Fødselsdato"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="10,299,0,0" TextWrapping="Wrap" Text="{Binding BarnNavn, Mode=TwoWay}" VerticalAlignment="Top" Width="124"/>
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="37" Margin="10,331,0,0" TextWrapping="Wrap" Text="{Binding DeviceId, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Device ID"/>
-        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="0" Margin="10,368,0,0" TextWrapping="Wrap" Text="{Binding Gender, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Gender"/>
-        <Button x:Name="button2" Content="Hent" HorizontalAlignment="Left" Height="59" Margin="10,510,0,0" VerticalAlignment="Top" Width="124" Command="{Binding GetBarnCommand, Mode=TwoWay}"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="216,395,0,0" TextWrapping="Wrap" Text="{Binding Fødselsdato, Converter={StaticResource IntToString}, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="DD/MM/YYYY"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="10,351,0,0" TextWrapping="Wrap" Text="{Binding BarnNavn, Mode=TwoWay}" VerticalAlignment="Top" Width="124"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="37" Margin="10,383,0,0" TextWrapping="Wrap" Text="{Binding DeviceId, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Device ID"/>
+        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="0" Margin="10,421,0,0" TextWrapping="Wrap" Text="{Binding Gender, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Gender"/>
+        <Button x:Name="button2" Content="Hent" HorizontalAlignment="Left" Height="59" Margin="10,522,0,0" VerticalAlignment="Top" Width="124" Command="{Binding GetBarnCommand, Mode=TwoWay}"/>
 
     </Grid>
 </Page>
