--- a/Vaccine App/View/Historik.xaml
+++ b/Vaccine App/View/Historik.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Vaccine_App.View.Opret"
+    x:Class="Vaccine_App.View.Historik"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Vaccine_App.View"
@@ -57,22 +57,16 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
-                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Opret Barn" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
+                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Historik" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
                     </Grid>
-                    <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="104,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="43" Width="173" FontSize="30" Text="Fødselsdato" Grid.Row="1"/>
-                    <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="147,246,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="39" Width="83" FontSize="30" Grid.Row="1">
-            
-                        <Run Text="Navn"/>
-                        <LineBreak/>
-                        <Run/>
-                    </TextBlock>
-                    <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="37,290,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="287" Height="59" Grid.Row="1"/>
-                    <Button x:Name="button1" Content="Ok" HorizontalAlignment="Left" Margin="115,436,0,0" VerticalAlignment="Top" Height="67" Width="133" FontSize="40" Click="Buttom_Click_5" Background="#59256FB4" Grid.Row="1"/>
-                    <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="37,113,0,0" VerticalAlignment="Top" Width="67" RenderTransformOrigin="0.51,0.538" Height="41" Grid.Row="1"/>
-                    <ComboBox x:Name="comboBox1" HorizontalAlignment="Left" Margin="104,113,0,0" VerticalAlignment="Top" Width="137" Height="41" Grid.Row="1"/>
-                    <ComboBox x:Name="comboBox2" HorizontalAlignment="Left" Margin="241,113,0,0" VerticalAlignment="Top" Width="83" Height="41" Grid.Row="1"/>
-                    <RadioButton x:Name="radioButton" Content="♀" HorizontalAlignment="Left" Margin="109,160,0,0" VerticalAlignment="Top" FontSize="16" Height="27" Width="121" Grid.Row="1"/>
-                    <RadioButton x:Name="radioButton1" Content="♂" HorizontalAlignment="Left" Margin="229,160,0,0" VerticalAlignment="Top" FontSize="16" Width="121" Height="27" Grid.Row="1"/>
+                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="262" Margin="32,55,0,0" VerticalAlignment="Top" Width="290" BorderBrush="Black" BorderThickness="2" Grid.Row="1"/>
+                    <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="45,16,0,0" TextWrapping="Wrap" Text="Givne Vaccinationer" VerticalAlignment="Top" Height="34" Width="270" FontSize="30" Grid.Row="1"/>
+                    <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="32,372,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="35" Width="290" Grid.Row="1"/>
+                    <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="67,335,0,0" TextWrapping="Wrap" Text="Opret givet vaccination:" VerticalAlignment="Top" Height="37" Width="248" FontSize="25" Grid.Row="1"/>
+                    <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="32,407,0,0" TextWrapping="Wrap" Text="(*F.eks rejsevaccinationer*)" VerticalAlignment="Top" Height="18" Width="262" FontSize="15" Grid.Row="1"/>
+                    <DatePicker HorizontalAlignment="Left" Margin="32,446,0,0" VerticalAlignment="Top" Width="290" Height="38" Grid.Row="1"/>
+                    <Button x:Name="button1" Content="Ok" HorizontalAlignment="Left" Margin="32,508,0,0" VerticalAlignment="Top" Padding="0,0,0,1" Height="45" Width="105" FontSize="30" Click="Buttom_Click_3" Background="#59256FB4" Grid.Row="1"/>
+                    <Button x:Name="button2" Content="Delete" HorizontalAlignment="Left" Margin="217,508,0,0" VerticalAlignment="Top" Padding="0,0,0,1" Height="45" Width="105" FontSize="30" Background="#59256FB4" Grid.Row="1"/>
                 </Grid>
             </SplitView.Content>
         </SplitView>
