--- a/Vaccine App/View/Kalender.xaml
+++ b/Vaccine App/View/Kalender.xaml
@@ -8,6 +8,62 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
 
+        <Button x:Name="HamburgerButt" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
+                    Width="50" Height="50" Background="Gray" Click="HamburgerButton_Click" Margin="0,0,0,0.4"/>
+
+        <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False"
+               CompactPaneLength="0" OpenPaneLength="150" Grid.RowSpan="2" Grid.ColumnSpan="2">
+
+            <SplitView.Pane>
+                <StackPanel Background="Gray">
+                    <Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
+                    Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>
+
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton1" FontFamily="Arial" Content="Startside"
+                    Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_1"/>
+                        <!--<TextBlock Text="Startside" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton2" FontFamily="Arial" Content="Påmindelser"
+                        Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_2"/>
+                        <!--<TextBlock Text="Påmindelser" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton3" FontFamily="Arial" Content="Kalender"
+                        Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_3"/>
+                        <!--<TextBlock Text="Kalender" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton4" FontFamily="Arial" Content="Historik"
+                        Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_4"/>
+                        <!--<TextBlock Text="Historik" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                </StackPanel>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
+                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Kalender" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
+                    </Grid>
+                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="428" Margin="30,31,0,0" VerticalAlignment="Top" Width="299" BorderBrush="#7F256FB4" Background="#FFBED7EE" BorderThickness="2" Grid.Row="1"/>
+                    <Button x:Name="button1" Content="Taget" HorizontalAlignment="Left" Margin="30,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
+                    <Button x:Name="button2" Content="Afvis" HorizontalAlignment="Left" Margin="196,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
+                </Grid>
+            </SplitView.Content>
+        </SplitView>
     </Grid>
 </Page>
