--- a/Vaccine App/View/Påmindelse.xaml
+++ b/Vaccine App/View/Påmindelse.xaml
@@ -8,6 +8,92 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
 
+        <Button x:Name="HamburgerButt" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
+                    Width="50" Height="50" Background="Gray" Click="HamburgerButton_Click" Margin="0,0,0,0.4"/>
+
+        <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False"
+               CompactPaneLength="0" OpenPaneLength="150" Grid.RowSpan="2" Grid.ColumnSpan="2">
+
+            <SplitView.Pane>
+                <StackPanel Background="Gray">
+                    <Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
+                    Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>
+
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton1" FontFamily="Arial" Content="Startside"
+                    Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_1"/>
+                        <!--<TextBlock Text="Startside" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton2" FontFamily="Arial" Content="Påmindelser"
+                        Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_2"/>
+                        <!--<TextBlock Text="Påmindelser" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton3" FontFamily="Arial" Content="Kalender"
+                        Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_3"/>
+                        <!--<TextBlock Text="Kalender" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="MenuButton4" FontFamily="Arial" Content="Historik"
+                        Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_4"/>
+                        <!--<TextBlock Text="Historik" FontSize="18" VerticalAlignment="Center" />-->
+                    </StackPanel>
+                </StackPanel>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
+                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Påmindelser" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
+                    </Grid>
+                    <CheckBox x:Name="checkBox" Content="8 Uger Før" HorizontalAlignment="Left" Margin="37,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
+                        <CheckBox.RenderTransform>
+                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                        </CheckBox.RenderTransform>
+                    </CheckBox>
+                    <CheckBox x:Name="checkBox_Copy" Content="6 Uger Før" HorizontalAlignment="Left" Margin="37,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="32" Width="122" Grid.Row="1">
+                        <CheckBox.RenderTransform>
+                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                        </CheckBox.RenderTransform>
+                    </CheckBox>
+                    <CheckBox x:Name="checkBox_Copy1" Content="4 Uger Før" HorizontalAlignment="Left" Margin="37,107,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" IsChecked="True" Height="32" Width="122" Grid.Row="1">
+                        <CheckBox.RenderTransform>
+                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                        </CheckBox.RenderTransform>
+                    </CheckBox>
+                    <CheckBox x:Name="checkBox_Copy2" Content="3 Uger Før" HorizontalAlignment="Left" Margin="231,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
+                        <CheckBox.RenderTransform>
+                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                        </CheckBox.RenderTransform>
+                    </CheckBox>
+                    <CheckBox x:Name="checkBox_Copy3" Content="2 Uger Før" HorizontalAlignment="Left" Margin="230,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="32" Width="122" Grid.Row="1">
+                        <CheckBox.RenderTransform>
+                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                        </CheckBox.RenderTransform>
+                    </CheckBox>
+                    <CheckBox x:Name="checkBox_Copy4" Content="1 Uge Før" HorizontalAlignment="Left" Margin="230,105,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
+                        <CheckBox.RenderTransform>
+                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                        </CheckBox.RenderTransform>
+                    </CheckBox>
+                    <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="8,150,0,0" TextWrapping="Wrap" Text="__________________________________________________________________" VerticalAlignment="Top" Width="337" Height="17" Grid.Row="1"/>
+                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="299" Margin="36,196,0,0" VerticalAlignment="Top" Width="288" BorderThickness="2" BorderBrush="Black" Grid.Row="1"/>
+                    <Button x:Name="button1" Content="Delete" HorizontalAlignment="Left" Padding="0,0,0,1" Margin="123,515,0,0" VerticalAlignment="Top" Height="45" Width="105" FontSize="30" Background="#59256FB4" Grid.Row="1"/>
+                </Grid>
+            </SplitView.Content>
+        </SplitView>
     </Grid>
 </Page>
