--- a/Vaccine App/View/Forside.xaml
+++ b/Vaccine App/View/Forside.xaml
@@ -69,6 +69,7 @@
                         VerticalAlignment="Top" Height="61" 
                         Width="180" Grid.Row="1" FontSize="25"
                         Click="Buttom_Click_5"/>
+                    <Button x:Name="button1" Content="MainPage" HorizontalAlignment="Left" Margin="265,10,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Buttom_Click_6"/>
                 </Grid>
             </SplitView.Content>
         </SplitView>
