--- a/Vaccine App/View/MainPage.xaml
+++ b/Vaccine App/View/MainPage.xaml
@@ -1,11 +1,11 @@
 ﻿<Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Vaccine_App"
+    xmlns:local="using:Vaccine_App.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:Vaccine_App.ViewModel"
-    x:Class="Vaccine_App.MainPage"
+    x:Class="Vaccine_App.View.MainPage"
     xmlns:converters="using:Vaccine_App.Converter"
     mc:Ignorable="d">
 
@@ -25,6 +25,7 @@
         <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="37" Margin="10,383,0,0" TextWrapping="Wrap" Text="{Binding DeviceId, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Device ID"/>
         <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="0" Margin="10,421,0,0" TextWrapping="Wrap" Text="{Binding Gender, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Gender"/>
         <Button x:Name="button2" Content="Hent" HorizontalAlignment="Left" Height="59" Margin="10,522,0,0" VerticalAlignment="Top" Width="124" Command="{Binding GetBarnCommand, Mode=TwoWay}"/>
+        <Button x:Name="button3" Content="Forside" HorizontalAlignment="Left" Margin="253,581,0,0" VerticalAlignment="Top" Click="button3_Click"/>
 
     </Grid>
 </Page>
