--- a/Vaccine App/View/Kalender.xaml
+++ b/Vaccine App/View/Kalender.xaml
@@ -1,13 +1,18 @@
 ﻿<Page
-    x:Class="Vaccine_App.View.Kalender"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Vaccine_App.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:Vaccine_App.ViewModel"
+    x:Class="Vaccine_App.View.Kalender"
     mc:Ignorable="d">
 
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.DataContext>
+            <ViewModel:VaccineViewmodel/>
+        </Grid.DataContext>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
             <ColumnDefinition/>
@@ -50,20 +55,19 @@
                     </StackPanel>
                 </StackPanel>
             </SplitView.Pane>
-            <SplitView.Content>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
-                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Kalender" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
-                    </Grid>
-                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="428" Margin="30,31,0,0" VerticalAlignment="Top" Width="299" BorderBrush="#7F256FB4" Background="#FFBED7EE" BorderThickness="2" Grid.Row="1"/>
-                    <Button x:Name="button1" Content="Taget" HorizontalAlignment="Left" Margin="30,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
-                    <Button x:Name="button2" Content="Afvis" HorizontalAlignment="Left" Margin="196,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                
+                <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
+                    <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Kalender" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
                 </Grid>
-            </SplitView.Content>
+                <ListView x:Name="listView" HorizontalAlignment="Left" Height="428" Margin="30,31,0,0" VerticalAlignment="Top" Width="299" BorderBrush="#7F256FB4" Background="#FFBED7EE" BorderThickness="2" Grid.Row="1" ItemsSource="{Binding VaccineCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedVaccine, Mode=TwoWay}"/>
+                <Button x:Name="button1" Content="Taget" HorizontalAlignment="Left" Margin="30,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
+                <Button x:Name="button2" Content="Afvis" HorizontalAlignment="Left" Margin="196,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
+            </Grid>
         </SplitView>
     </Grid>
 </Page>
