--- a/Vaccine App/View/Påmindelse.xaml
+++ b/Vaccine App/View/Påmindelse.xaml
@@ -1,13 +1,15 @@
 ﻿<Page
-    x:Class="Vaccine_App.View.Påmindelse"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Vaccine_App.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:Vaccine_App.ViewModel"
+    x:Class="Vaccine_App.View.Påmindelse"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
             <ColumnDefinition/>
@@ -16,6 +18,10 @@
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+
+        <Grid.DataContext>
+            <ViewModel:BrugerViewmodel/>
+        </Grid.DataContext>
 
         <Button x:Name="HamburgerButt" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
                     Width="50" Height="50" Background="Gray" Click="HamburgerButton_Click" Margin="0,0,0,0.4"/>
@@ -50,50 +56,50 @@
                     </StackPanel>
                 </StackPanel>
             </SplitView.Pane>
-            <SplitView.Content>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
-                        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Påmindelser" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
-                    </Grid>
-                    <CheckBox x:Name="checkBox" Content="8 Uger Før" HorizontalAlignment="Left" Margin="37,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
-                        <CheckBox.RenderTransform>
-                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
-                        </CheckBox.RenderTransform>
-                    </CheckBox>
-                    <CheckBox x:Name="checkBox_Copy" Content="6 Uger Før" HorizontalAlignment="Left" Margin="37,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="32" Width="122" Grid.Row="1">
-                        <CheckBox.RenderTransform>
-                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
-                        </CheckBox.RenderTransform>
-                    </CheckBox>
-                    <CheckBox x:Name="checkBox_Copy1" Content="4 Uger Før" HorizontalAlignment="Left" Margin="37,107,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" IsChecked="True" Height="32" Width="122" Grid.Row="1">
-                        <CheckBox.RenderTransform>
-                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
-                        </CheckBox.RenderTransform>
-                    </CheckBox>
-                    <CheckBox x:Name="checkBox_Copy2" Content="3 Uger Før" HorizontalAlignment="Left" Margin="231,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
-                        <CheckBox.RenderTransform>
-                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
-                        </CheckBox.RenderTransform>
-                    </CheckBox>
-                    <CheckBox x:Name="checkBox_Copy3" Content="2 Uger Før" HorizontalAlignment="Left" Margin="230,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="32" Width="122" Grid.Row="1">
-                        <CheckBox.RenderTransform>
-                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
-                        </CheckBox.RenderTransform>
-                    </CheckBox>
-                    <CheckBox x:Name="checkBox_Copy4" Content="1 Uge Før" HorizontalAlignment="Left" Margin="230,105,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
-                        <CheckBox.RenderTransform>
-                            <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
-                        </CheckBox.RenderTransform>
-                    </CheckBox>
-                    <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="8,150,0,0" TextWrapping="Wrap" Text="__________________________________________________________________" VerticalAlignment="Top" Width="337" Height="17" Grid.Row="1"/>
-                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="299" Margin="36,196,0,0" VerticalAlignment="Top" Width="288" BorderThickness="2" BorderBrush="Black" Grid.Row="1"/>
-                    <Button x:Name="button1" Content="Delete" HorizontalAlignment="Left" Padding="0,0,0,1" Margin="123,515,0,0" VerticalAlignment="Top" Height="45" Width="105" FontSize="30" Background="#59256FB4" Grid.Row="1"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
+                    <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Påmindelser" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
                 </Grid>
-            </SplitView.Content>
+                <CheckBox x:Name="checkBox" Content="8 Uger Før" HorizontalAlignment="Left" Margin="37,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
+                    <CheckBox.RenderTransform>
+                        <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                    </CheckBox.RenderTransform>
+                </CheckBox>
+                <CheckBox x:Name="checkBox_Copy" Content="6 Uger Før" HorizontalAlignment="Left" Margin="37,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="32" Width="122" Grid.Row="1">
+                    <CheckBox.RenderTransform>
+                        <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                    </CheckBox.RenderTransform>
+                </CheckBox>
+                <CheckBox x:Name="checkBox_Copy1" Content="4 Uger Før" HorizontalAlignment="Left" Margin="37,107,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" IsChecked="True" Height="32" Width="122" Grid.Row="1">
+                    <CheckBox.RenderTransform>
+                        <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                    </CheckBox.RenderTransform>
+                </CheckBox>
+                <CheckBox x:Name="checkBox_Copy2" Content="3 Uger Før" HorizontalAlignment="Left" Margin="231,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
+                    <CheckBox.RenderTransform>
+                        <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                    </CheckBox.RenderTransform>
+                </CheckBox>
+                <CheckBox x:Name="checkBox_Copy3" Content="2 Uger Før" HorizontalAlignment="Left" Margin="230,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="32" Width="122" Grid.Row="1">
+                    <CheckBox.RenderTransform>
+                        <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                    </CheckBox.RenderTransform>
+                </CheckBox>
+                <CheckBox x:Name="checkBox_Copy4" Content="1 Uge Før" HorizontalAlignment="Left" Margin="230,105,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
+                    <CheckBox.RenderTransform>
+                        <CompositeTransform ScaleX="1.5" ScaleY="1.5"/>
+                    </CheckBox.RenderTransform>
+                </CheckBox>
+                <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="8,150,0,0" TextWrapping="Wrap" Text="__________________________________________________________________" VerticalAlignment="Top" Width="337" Height="17" Grid.Row="1"/>
+                <ListView x:Name="listView" HorizontalAlignment="Left" Height="299" Margin="36,196,0,0" VerticalAlignment="Top" Width="288" BorderThickness="2" BorderBrush="Black" Grid.Row="1" ItemsSource="{Binding BarnCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedBarn, Mode=TwoWay}"/>
+                <Button x:Name="button1" Content="Delete" HorizontalAlignment="Left" Padding="0,0,0,1" Margin="207,515,0,0" VerticalAlignment="Top" Height="45" Width="105" FontSize="18" Background="#59256FB4" Grid.Row="1" Command="{Binding DeleteBarnCommand}"/>
+                <Button x:Name="button2" Content="Vaccineplan" HorizontalAlignment="Left" Padding="0,0,0,1" Margin="63,515,0,0" VerticalAlignment="Top" Height="45" Width="105" FontSize="18" Background="#59256FB4" Grid.Row="1" RenderTransformOrigin="0.489,0.541"/>
+
+            </Grid>
         </SplitView>
     </Grid>
 </Page>
