--- a/Vaccine App/View/Kalender.xaml
+++ b/Vaccine App/View/Kalender.xaml
@@ -18,13 +18,13 @@
         </Grid.RowDefinitions>
 
         <Button x:Name="HamburgerButt" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
-                    Width="50" Height="50" Background="Gray" Click="HamburgerButton_Click" Margin="0,0,0,0.4"/>
+                    Width="50" Height="50" Background="#FF6BAFCD" Click="HamburgerButton_Click" Margin="0,0,0,0"/>
 
         <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False"
                CompactPaneLength="0" OpenPaneLength="150" Grid.RowSpan="2" Grid.ColumnSpan="2">
 
             <SplitView.Pane>
-                <StackPanel Background="Gray">
+                <StackPanel Background="#FF9CC6ED" BorderThickness="2" BorderBrush="#FF7F97B3">
                     <Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
                     Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>
 
@@ -61,12 +61,12 @@
                         <RowDefinition Height="50"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
+                    <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="#FF6BAFCD">
                         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Kalender" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
                     </Grid>
-                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="428" Margin="30,31,0,0" VerticalAlignment="Top" Width="299" BorderBrush="#7F256FB4" Background="#FFBED7EE" BorderThickness="2" Grid.Row="1"/>
-                    <Button x:Name="button1" Content="Taget" HorizontalAlignment="Left" Margin="30,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
-                    <Button x:Name="button2" Content="Afvis" HorizontalAlignment="Left" Margin="196,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#59256FB4" FontSize="40" Grid.Row="1"/>
+                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="428" Margin="30,31,0,0" VerticalAlignment="Top" Width="299" BorderBrush="#7F256FB4" Background="#FF9CC6ED" BorderThickness="2" Grid.Row="1"/>
+                    <Button x:Name="button1" Content="Taget" HorizontalAlignment="Left" Margin="30,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#FF9CC6ED" FontSize="40" Grid.Row="1"/>
+                    <Button x:Name="button2" Content="Afvis" HorizontalAlignment="Left" Margin="196,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#FF9CC6ED" FontSize="40" Grid.Row="1"/>
                 </Grid>
             </SplitView.Content>
         </SplitView>
