--- a/Vaccine App/View/Opret.xaml
+++ b/Vaccine App/View/Opret.xaml
@@ -28,15 +28,15 @@
         </Grid.DataContext>
 
         <Button x:Name="HamburgerButt" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
-                    Width="50" Height="50" Background="Gray" Click="HamburgerButton_Click" Margin="0,0,0,0"/>
+                    Width="50" Height="50" Background="#FF6BAFCD" Click="HamburgerButton_Click" Margin="0,0,0,0"/>
 
         <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False"
                CompactPaneLength="0" OpenPaneLength="150" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="0,0,0,0">
 
             <SplitView.Pane>
-                <StackPanel Background="Gray">
-                    <!--<Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
-                    Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>-->
+                <StackPanel Background="#FF9CC6ED" BorderThickness="2" BorderBrush="#FF7F97B3">
+                    <Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
+                    Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>
 
                     <StackPanel Orientation="Horizontal">
                         <Button x:Name="MenuButton1" FontFamily="Arial" Content="Startside"
@@ -70,7 +70,7 @@
                     <RowDefinition Height="50"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
+                <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="#FF6BAFCD">
                     <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Opret Barn" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
                 </Grid>
                 <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="104,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="43" Width="173" FontSize="30" Text="Fødselsdato" Grid.Row="1"/>
@@ -81,7 +81,7 @@
                         <Run/>
                 </TextBlock>
                 <TextBox x:Name="textBox2" HorizontalAlignment="Left" TextAlignment="Center" Margin="37,290,0,0" TextWrapping="Wrap" Text="{Binding BarnNavn, Mode=TwoWay}" VerticalAlignment="Top" Width="287" Height="59" Grid.Row="1" PlaceholderText="Navn" FontSize="25"/>
-                <Button x:Name="button1" Content="Gem" Command="{Binding CreateBarnCommand}" HorizontalAlignment="Left" Margin="115,436,0,0" VerticalAlignment="Top" Height="67" Width="133" FontSize="40" Click="Buttom_Click_5" Background="#59256FB4" Grid.Row="1"/>
+                <Button x:Name="button1" Content="Gem" Command="{Binding CreateBarnCommand}" HorizontalAlignment="Left" Margin="115,436,0,0" VerticalAlignment="Top" Height="67" Width="133" FontSize="40" Click="Buttom_Click_5" Background="#FF9CC6ED" Grid.Row="1"/>
                 <RadioButton x:Name="radioButton" Content="{Binding Gender}" HorizontalAlignment="Left" Margin="109,160,0,0" VerticalAlignment="Top" FontSize="16" Height="27" Width="121" Grid.Row="1" Checked="radioButton_Checked"/>
                 <RadioButton x:Name="radioButton1" Content="{Binding Gender}" HorizontalAlignment="Left" Margin="229,160,0,0" VerticalAlignment="Top" FontSize="16" Width="121" Height="27" Grid.Row="1" Checked="radioButton1_Checked" GroupName=""/>
                 <TextBox x:Name="textBox" TextAlignment="Center" HorizontalAlignment="Left" Margin="37,113,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Fødselsdato, Converter={StaticResource IntToString}, Mode=TwoWay}" PlaceholderText="DD/MM/YYYY" VerticalAlignment="Top" Width="287" Height="48" FontSize="25"/>
