--- a/Vaccine App/View/Påmindelse.xaml
+++ b/Vaccine App/View/Påmindelse.xaml
@@ -23,13 +23,13 @@
         </Grid.DataContext>
 
         <Button x:Name="HamburgerButt" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
-                    Width="50" Height="50" Background="Gray" Click="HamburgerButton_Click" Margin="0,0,0,0.4"/>
+                    Width="50" Height="50" Background="#FF6BAFCD" Click="HamburgerButton_Click" Margin="0,0,0,0"/>
 
         <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False"
                CompactPaneLength="0" OpenPaneLength="150" Grid.RowSpan="2" Grid.ColumnSpan="2">
 
             <SplitView.Pane>
-                <StackPanel Background="Gray">
+                <StackPanel Background="#FF9CC6ED" BorderThickness="2" BorderBrush="#FF7F97B3">
                     <Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
                     Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>
 
@@ -65,7 +65,7 @@
                     <RowDefinition Height="50"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="Gray">
+                <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="#FF6BAFCD">
                     <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Påmindelser" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
                 </Grid>
                 <CheckBox x:Name="checkBox" Content="8 Uger Før" HorizontalAlignment="Left" Margin="37,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="33" Width="122" Grid.Row="1">
@@ -100,7 +100,7 @@
                 </CheckBox>
                 <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="8,150,0,0" TextWrapping="Wrap" Text="__________________________________________________________________" VerticalAlignment="Top" Width="337" Height="17" Grid.Row="1"/>
                 <ListView x:Name="listView" HorizontalAlignment="Left" Height="299" Margin="36,196,0,0" VerticalAlignment="Top" Width="288" BorderThickness="2" BorderBrush="Black" Grid.Row="1" ItemsSource="{Binding BarnCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedBarn, Mode=TwoWay}"/>
-                <Button x:Name="button1" Content="Delete" HorizontalAlignment="Left" Padding="0,0,0,1" Margin="123,515,0,0" VerticalAlignment="Top" Height="45" Width="105" FontSize="30" Background="#59256FB4" Grid.Row="1" Command="{Binding DeleteBarnCommand}"/>
+                <Button x:Name="button1" Content="Delete" HorizontalAlignment="Left" Padding="0,0,0,1" Margin="123,515,0,0" VerticalAlignment="Top" Height="45" Width="105" FontSize="30" Background="#FF9CC6ED" Grid.Row="1" Command="{Binding DeleteBarnCommand}"/>
             </Grid>
         </SplitView>
     </Grid>
