added converter til combobox (virker ikke endnu) ændret get i persistency (se udkodning) Converter tilføjet til view se xaml

--- a/Vaccine App/View/Forside.xaml
+++ b/Vaccine App/View/Forside.xaml
@@ -69,6 +69,7 @@
                         VerticalAlignment="Top" Height="61" 
                         Width="180" Grid.Row="1" FontSize="25"
                         Click="Buttom_Click_5"/>
+                    <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Margin="148,516,0,0" Grid.Row="1" VerticalAlignment="Top" Click="button1_Click"/>
                 </Grid>
             </SplitView.Content>
         </SplitView>
